# tracker-web-bridge

./: README.md  meson.build  package-lock.json  package.json
data/: com.paysonwallach.TrackerWeb.bridge.json  com.paysonwallach.tracker-web.bridge.json
meson/: post_install.py
meta/: README.md.njk
src/: Application.vala  ExtensionProxy.vala  Main.vala  Protocol.vala  meson.build
src/Utils/: Serializable.vala
